--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,9 @@ jobs:
           destination: reports
       - store_test_results:
           path: app/build/test-results
+      - run:
+          name: Build
+          command: ./gradlew assemble
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: apks/
