--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
-version: 4
+version: 5
 jobs:
   build:
+    branches:
+      only:
+        - master
     working_directory: ~/code
     docker:
       - image: circleci/android:api-28
