--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 5
+version: 6
 jobs:
   build:
     branches:
@@ -38,3 +38,6 @@ jobs:
       - store_artifacts:
           path: app/build/outputs/apk/
           destination: apks/
+      - run:
+          name: Upload to Google Play
+          command: ./gradlew publishRelease
