--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 6
+version: 7
 jobs:
   build:
     branches:
@@ -33,11 +33,17 @@ jobs:
       - store_test_results:
           path: app/build/test-results
       - run:
-          name: Build
+          name: Build APK
           command: ./gradlew assemble
       - store_artifacts:
           path: app/build/outputs/apk/
           destination: apks/
+      - run:
+          name: Build AAB
+          command: ./gradlew bundleRelease
+      - store_artifacts:
+          path: app/build/outputs/bundle/
+          destination: bundle/
       - run:
           name: Upload to Google Play
           command: ./gradlew publishRelease
